--- a/hatchat_server/package.json
+++ b/hatchat_server/package.json
@@ -6,6 +6,7 @@
     "cors": "^2.8.5",
     "custom-env": "^2.0.2",
     "express": "^4.18.2",
+    "firebase-admin": "^11.9.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.1",
     "socket.io": "^4.6.2"
